# talent-plan

courses/rust/yqm-building-blocks/bb-3/ping-pong/: Cargo.toml
courses/rust/yqm-building-blocks/bb-4/thread_pool/: Cargo.toml
courses/rust/yqm-building-blocks/bb-4/thread_pool/src/: lib.rs
courses/rust/yqm-projects/: README.md
courses/rust/yqm-projects/project-1/: Cargo.toml  README.md
courses/rust/yqm-projects/project-1/src/: lib.rs
courses/rust/yqm-projects/project-2/: Cargo.toml  README.md
courses/rust/yqm-projects/project-2/src/: common.rs  error.rs  lib.rs
courses/rust/yqm-projects/project-3/: Cargo.toml  README.md
courses/rust/yqm-projects/project-3/src/: client.rs  common.rs  lib.rs  server.rs
courses/rust/yqm-projects/project-3/src/engine/: kvstore.rs  mod.rs  sled_engine.rs
courses/rust/yqm-projects/project-4/: Cargo.toml  README.md
courses/rust/yqm-projects/project-4/src/: client.rs  error.rs  lib.rs  server.rs
courses/rust/yqm-projects/project-4/src/engine/: kvstore.rs  mod.rs  new_kvstore.rs  sled_engine.rs
courses/rust/yqm-projects/project-4/src/thread_pool/: mod.rs  naive.rs  shared_queue.rs
